--- a/src/components/search-package-list-item/search-package-list-item.css
+++ b/src/components/search-package-list-item/search-package-list-item.css
@@ -95,7 +95,7 @@
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(to right, color(white a(0)), color(white a(30%)) 50%, color(white a(0)));
+    background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255,0.3) 50%, rgba(255, 255, 255,0));
     background-size: 10em 100%;
     background-position: -10em 0;
     animation: shimmer 3s infinite;
