UIEH-1449 Package Record - Titlelist Display - Add Column for Tags and few column width adjustments.

--- a/src/components/package/show/components/PackageTitleList/PackageTitleList.css
+++ b/src/components/package/show/components/PackageTitleList/PackageTitleList.css
@@ -5,3 +5,11 @@
   height: 560px;
   margin: 0 auto;
 }
+
+.cellTopAlign {
+  align-items: flex-start;
+}
+
+.headerCell {
+  padding: var(--gutter-static-two-thirds) 0 var(--gutter-static-one-third) var(--gutter-static-two-thirds);
+}
