UIEH-1464 Package-Title MCL: indicate HLM title visibility (ie Hidden) in status column.

--- a/src/components/package/show/components/PackageTitleList/PackageTitleList.css
+++ b/src/components/package/show/components/PackageTitleList/PackageTitleList.css
@@ -13,3 +13,10 @@
 .headerCell {
   padding: var(--gutter-static-two-thirds) 0 var(--gutter-static-one-third) var(--gutter-static-two-thirds);
 }
+
+.statusCellWrapper {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
